Solve issue #4206: The contrast of font color of code comment in code cell is lower than 4.5:1 (#4746)
Fix issue #4206 - increase contrast of comments in code cells

--- a/notebook/static/notebook/less/highlight.less
+++ b/notebook/static/notebook/less/highlight.less
@@ -29,8 +29,9 @@ Adapted from GitHub theme
   color: #BA2121;
 }
 
+//fix issue #4206, overwrite .highlight-comment class, from #408080 to #007979
 .highlight-comment{
-  color: #408080;
+  color: #007979;
   font-style: italic;
 }
 
